[gd_scene load_steps=3 format=3 uid="uid://t6716qkgkffx"]

[ext_resource type="Script" uid="uid://da2w016335eqw" path="res://scenes/game_over/game_over.gd" id="1_sseyc"]
[ext_resource type="Theme" uid="uid://uhqicibdpjko" path="res://main_theme.tres" id="2_anb0t"]

[node name="MenuCanvasLayer" type="CanvasLayer"]
script = ExtResource("1_sseyc")

[node name="PanelContainer" type="PanelContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource("2_anb0t")

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2
size_flags_vertical = 4

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="Label" type="Label" parent="PanelContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 80
text = "Game Over!"

[node name="MessageLabel" type="Label" parent="PanelContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 45
text = "You Won!"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="RetryButton" type="Button" parent="PanelContainer/VBoxContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_stretch_ratio = 0.0
text = "Retry"

[node name="BackToMenuButton" type="Button" parent="PanelContainer/VBoxContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Main Menu"

[connection signal="pressed" from="PanelContainer/VBoxContainer/VBoxContainer/HBoxContainer/RetryButton" to="." method="_on_retry_button_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/VBoxContainer/HBoxContainer/BackToMenuButton" to="." method="_on_back_to_menu_button_pressed"]
